--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,3 +15,10 @@ link_libraries(${QT_LIBRARIES})
 
 add_subdirectory(test)
 add_subdirectory(unit_tests)
+add_subdirectory(admin)
+add_subdirectory(client)
+add_subdirectory(config_editor)
+add_subdirectory(projector)
+add_subdirectory(question_editor)
+add_subdirectory(server)
+add_subdirectory(user_manager)
