--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -7,22 +7,23 @@
 #add_executable(test ${SRCS} ${UIS_H} ${MOC_SRCS})
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
 link_libraries(${QT_LIBRARIES})
+set(INCLUDE_PATH ../../include)
 
 set(NET_CLIENT_SRC client.cpp)
-set(NET_CLIENT_MHDR client.h)
+set(NET_CLIENT_MHDR ${INCLUDE_PATH}/client.h)
 qt4_wrap_cpp(NET_CLIENT_MSRC ${NET_CLIENT_MHDR})
 set(NET_CLIENT_UIS client.ui)
 qt4_wrap_ui(NET_CLIENT_UIS_H ${NET_CLIENT_UIS})
 add_executable(client ${NET_CLIENT_SRC} ${NET_CLIENT_MSRC} ${NET_CLIENT_UIS_H})
 
 set(NET_SERVER_SRC server.cpp)
-set(NET_SERVER_MHDR server.h)
+set(NET_SERVER_MHDR ${INCLUDE_PATH}/server.h)
 qt4_wrap_cpp(NET_SERVER_MSRC ${NET_SERVER_MHDR})
 set(NET_SERVER_UIS server.ui)
 qt4_wrap_ui(NET_SERVER_UIS_H ${NET_SERVER_UIS})
 add_executable(server ${NET_SERVER_SRC} ${NET_SERVER_MSRC} ${NET_SERVER_UIS_H})
 
 set(TEST_SRC tester.cpp)
-set(TEST_HDR tester.h)
+set(TEST_HDR ${INCLUDE_PATH}/tester.h)
 qt4_wrap_cpp(TEST_MOC ${TEST_HDR})
 add_executable(test ${TEST_SRC} ${TEST_MOC})
