--- a/src/unit_tests/CMakeLists.txt
+++ b/src/unit_tests/CMakeLists.txt
@@ -20,9 +20,11 @@ add_executable(sql_test ${SQL_UT_SRCS} ${SQL_UT_MSRCS})
 
 set(CCNET_UT_SRCS contestant_net_test.cpp 
 	../net/contestant_net.cpp
-	../net/server_net.cpp)
+	../net/server_net.cpp
+	../utils/sql_util.cpp)
 set(CCNET_UT_MHDRS ../../include/tests/contestant_net_test.h 
 	../../include/net/contestant_net.h
-	../../include/net/server_net.h)
+	../../include/net/server_net.h
+	../../include/sql_util.h)
 qt4_wrap_cpp(CCNET_UT_MSRCS ${CCNET_UT_MHDRS})
 add_executable(ccnet_test ${CCNET_UT_SRCS} ${CCNET_UT_MSRCS})
