A huge bunch of commits
Fixed some bugs, re-used the client and server test programs
as the network layer tester. Unit testing for networking fails.
I'll have that removed later on.

--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -9,15 +9,21 @@ include_directories(${CMAKE_CURRENT_BINARY_DIR})
 link_libraries(${QT_LIBRARIES})
 set(INCLUDE_PATH ../../include)
 
-set(NET_CLIENT_SRC client.cpp)
-set(NET_CLIENT_MHDR ${INCLUDE_PATH}/client.h)
+set(NET_CLIENT_SRC client.cpp
+		../net/contestant_net.cpp)
+set(NET_CLIENT_MHDR ${INCLUDE_PATH}/client.h
+		${INCLUDE_PATH}/net/contestant_net.h)
 qt4_wrap_cpp(NET_CLIENT_MSRC ${NET_CLIENT_MHDR})
 set(NET_CLIENT_UIS client.ui)
 qt4_wrap_ui(NET_CLIENT_UIS_H ${NET_CLIENT_UIS})
 add_executable(client ${NET_CLIENT_SRC} ${NET_CLIENT_MSRC} ${NET_CLIENT_UIS_H})
 
-set(NET_SERVER_SRC server.cpp)
-set(NET_SERVER_MHDR ${INCLUDE_PATH}/server.h)
+set(NET_SERVER_SRC server.cpp 
+		../net/server_net.cpp
+		../utils/sql_util.cpp)
+set(NET_SERVER_MHDR ${INCLUDE_PATH}/server.h 
+		${INCLUDE_PATH}/net/server_net.h
+		${INCLUDE_PATH}/sql_util.h)
 qt4_wrap_cpp(NET_SERVER_MSRC ${NET_SERVER_MHDR})
 set(NET_SERVER_UIS server.ui)
 qt4_wrap_ui(NET_SERVER_UIS_H ${NET_SERVER_UIS})
