Changed the build system such that:
The network stuff are now compiled to a static lib
The utility (xml, sql) stuff also go into a static lib
This create libnetwork and libutil for everything else
to link to. This will reduce redundant compilation and
save disk space overall.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -22,3 +22,5 @@ add_subdirectory(projector)
 add_subdirectory(question_editor)
 add_subdirectory(server)
 add_subdirectory(user_manager)
+add_subdirectory(net)
+add_subdirectory(utils)
