--- a/src/utils/CMakeLists.txt
+++ b/src/utils/CMakeLists.txt
@@ -10,7 +10,7 @@ include_directories(${CMAKE_CURRENT_BINARY_DIR})
 link_libraries(${QT_LIBRARIES})
 
 set(UTIL_SRCS sql_util.cpp xml_util.cpp)
-set(UTIL_MHDRS ${INCLUDE_DIR}/sql_util.h
-		${INCLUDE_DIR}/xml_util.h)
+set(UTIL_MHDRS ${INCLUDE_DIR}/util/sql_util.h
+	${INCLUDE_DIR}/util/xml_util.h)
 QT4_WRAP_CPP(UTIL_MSRCS ${UTIL_MHDRS})
 add_library(util ${UTIL_SRCS} ${UTIL_MSRCS})
