server,client: Changed some class names
Corrected the inheritance a bit and setup the Ui properly.

--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -14,14 +14,14 @@ set(NET_CLIENT_MHDR ${INCLUDE_PATH}/client.h)
 qt4_wrap_cpp(NET_CLIENT_MSRC ${NET_CLIENT_MHDR})
 set(NET_CLIENT_UIS client.ui)
 qt4_wrap_ui(NET_CLIENT_UIS_H ${NET_CLIENT_UIS})
-add_executable(client ${NET_CLIENT_SRC} ${NET_CLIENT_MSRC} ${NET_CLIENT_UIS_H})
+add_executable(test_client ${NET_CLIENT_SRC} ${NET_CLIENT_MSRC} ${NET_CLIENT_UIS_H})
 
 set(NET_SERVER_SRC server.cpp)
 set(NET_SERVER_MHDR ${INCLUDE_PATH}/server.h )
 qt4_wrap_cpp(NET_SERVER_MSRC ${NET_SERVER_MHDR})
 set(NET_SERVER_UIS server.ui)
 qt4_wrap_ui(NET_SERVER_UIS_H ${NET_SERVER_UIS})
-add_executable(server ${NET_SERVER_SRC} ${NET_SERVER_MSRC} ${NET_SERVER_UIS_H})
+add_executable(test_server ${NET_SERVER_SRC} ${NET_SERVER_MSRC} ${NET_SERVER_UIS_H})
 
 set(TEST_SRC tester.cpp)
 set(TEST_HDR ${INCLUDE_PATH}/tester.h)
