build sys: Cleaned up the system
Moved redundant commands to the upper directories.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,7 +4,8 @@ set(QT_USE_QTTEST true)
 set(QT_USE_QTXML true)
 include(${QT_USE_FILE})
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
-link_libraries(${QT_LIBRARIES})
+set(INCLUDE_DIR "${PROJECT_SOURCE_DIR}/include")
+link_libraries(${QT_LIBRARIES} network util)
 
 #set(SRCS main.cpp mainwindow.cpp)
 #set(MOC_HDRS mainwindow.h)
