Updated CMakeLists to include question editor executable (qeditor). // It finally is actually running my ui! Yay ^_^!

--- a/src/question_editor/CMakeLists.txt
+++ b/src/question_editor/CMakeLists.txt
@@ -7,9 +7,9 @@
 #add_executable(test ${SRCS} ${UIS_H} ${MOC_SRCS})
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
 
-set(Q_EDITOR_SRCS question_editor.cpp)
-set(Q_EDITOR_MHDRS ${INCLUDE_DIR}/question_editor.h)
-#qt4_wrap_cpp(Q_EDITOR_MSRCS ${Q_EDITOR_MHDRS})
-set (Q_EDITOR_UI question_editor.ui)
-#qt4_wrap_ui(Q_EDITOR_UI_H ${Q_EDITOR_UI})
-#add_executable(qeditor ${Q_EDITOR_SRCS} ${Q_EDITOR_MHDRS} ${Q_EDITOR_UI})
+set(Q_EDITOR_SRC question_editor.cpp)
+set(Q_EDITOR_MHDR ${INCLUDE_DIR}/question_editor.h)
+qt4_wrap_cpp(Q_EDITOR_MSRC ${Q_EDITOR_MHDR})
+set(Q_EDITOR_UIS question_editor.ui)
+qt4_wrap_ui(Q_EDITOR_UIS_H ${Q_EDITOR_UIS})
+add_executable(qeditor ${Q_EDITOR_SRC} ${Q_EDITOR_MSRC} ${Q_EDITOR_UIS_H})
