--- a/src/utils/CMakeLists.txt
+++ b/src/utils/CMakeLists.txt
@@ -8,7 +8,4 @@
 
 set(UTIL_SRCS sql_util.cpp
 		xml_util.cpp)
-set(UTIL_MHDRS ${INCLUDE_DIR}/util/sql_util.h
-	${INCLUDE_DIR}/util/xml_util.h)
-QT4_WRAP_CPP(UTIL_MSRCS ${UTIL_MHDRS})
-add_library(util ${UTIL_SRCS} ${UTIL_MSRCS})
+add_library(util ${UTIL_SRCS})
