--- a/src/unit_tests/CMakeLists.txt
+++ b/src/unit_tests/CMakeLists.txt
@@ -19,7 +19,7 @@ qt4_wrap_cpp(SQL_UT_MSRCS ${SQL_UT_MHDRS})
 add_executable(sql_test ${SQL_UT_SRCS} ${SQL_UT_MSRCS})
 add_test(sql_ut sql_test)
 
-set(CCNET_UT_SRCS contestant_net_test.cpp)
-set(CCNET_UT_MHDRS contestant_net_test.h)
-qt4_wrap_cpp(CCNET_UT_MSRCS ${CCNET_UT_MHDRS})
-add_executable(ccnet_test ${CCNET_UT_SRCS} ${CCNET_UT_MSRCS})
+#set(CCNET_UT_SRCS contestant_net_test.cpp)
+#set(CCNET_UT_MHDRS contestant_net_test.h)
+#qt4_wrap_cpp(CCNET_UT_MSRCS ${CCNET_UT_MHDRS})
+#add_executable(ccnet_test ${CCNET_UT_SRCS} ${CCNET_UT_MSRCS})
