Made some minor changes to reg app  the main CMakeLists.txt
-added my registration app to the main CMakeLists.txt because Jim forgot me :(
-edited registration_app.cpp and the three reg app .ui files so that they compiled properly

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -16,3 +16,4 @@ add_subdirectory(server)
 add_subdirectory(user_manager)
 add_subdirectory(net)
 add_subdirectory(utils)
+add_subdirectory(registration_app)
