Did major revamping to the reg app.
-redid the UI files to make room for more functionality
-edited CMakeLists.txt to reflect this change
-re-implemented registration_app.cpp, at least the basics.

--- a/src/registration_app/CMakeLists.txt
+++ b/src/registration_app/CMakeLists.txt
@@ -10,6 +10,6 @@ include_directories(${CMAKE_CURRENT_BINARY_DIR})
 set(REG_APP_SRC registration_app.cpp)
 set(REG_APP_MHDR ${INCLUDE_DIR}/registration_app.h)
 QT4_WRAP_CPP(REG_APP_MSRCS ${REG_APP_MHDR})
-set(REG_APP_UIS add_team.ui team_view.ui teammember_edit.ui)
+set(REG_APP_UIS team_table.ui user_table.ui user_edit.ui)
 QT4_WRAP_UI(REG_APP_UIS_H ${REG_APP_UIS})
 add_executable(registration ${REG_APP_SRC} ${REG_APP_UIS_H} ${REG_APP_MSRCS})
