--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -17,3 +17,4 @@ add_subdirectory(user_manager)
 add_subdirectory(net)
 add_subdirectory(utils)
 add_subdirectory(registration_app)
+add_subdirectory(checker)
