Did adjustments brought about by adding/deleting of elements in ui.

--- a/src/question_editor/CMakeLists.txt
+++ b/src/question_editor/CMakeLists.txt
@@ -10,6 +10,6 @@ include_directories(${CMAKE_CURRENT_BINARY_DIR})
 set(Q_EDITOR_SRC question_editor.cpp question_model.cpp)
 set(Q_EDITOR_MHDR ${INCLUDE_DIR}/question_editor.h ${INCLUDE_DIR}/question_model.h )
 qt4_wrap_cpp(Q_EDITOR_MSRC ${Q_EDITOR_MHDR})
-set(Q_EDITOR_UIS question_editor.ui)
+set(Q_EDITOR_UIS question_editor_v2.ui)
 qt4_wrap_ui(Q_EDITOR_UIS_H ${Q_EDITOR_UIS})
 add_executable(qeditor ${Q_EDITOR_SRC} ${Q_EDITOR_MSRC} ${Q_EDITOR_UIS_H})
