--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -7,15 +7,15 @@
 #add_executable(test ${SRCS} ${UIS_H} ${MOC_SRCS})
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
 
-set(NET_CLIENT_SRC client.cpp)
-set(NET_CLIENT_MHDR ${INCLUDE_DIR}/client.h)
+set(NET_CLIENT_SRC test_client.cpp)
+set(NET_CLIENT_MHDR ${INCLUDE_DIR}/test_client.h)
 qt4_wrap_cpp(NET_CLIENT_MSRC ${NET_CLIENT_MHDR})
 set(NET_CLIENT_UIS client.ui)
 qt4_wrap_ui(NET_CLIENT_UIS_H ${NET_CLIENT_UIS})
 add_executable(test_client ${NET_CLIENT_SRC} ${NET_CLIENT_MSRC} ${NET_CLIENT_UIS_H})
 
-set(NET_SERVER_SRC server.cpp)
-set(NET_SERVER_MHDR ${INCLUDE_DIR}/server.h )
+set(NET_SERVER_SRC test_server.cpp)
+set(NET_SERVER_MHDR ${INCLUDE_DIR}/test_server.h )
 qt4_wrap_cpp(NET_SERVER_MSRC ${NET_SERVER_MHDR})
 set(NET_SERVER_UIS server.ui)
 qt4_wrap_ui(NET_SERVER_UIS_H ${NET_SERVER_UIS})
