Fix stupid error in compilation.
...no wonder ctemplate seems small. I accidentally replaced the
entire source specification when I just wanted to add an additional
source.

--- a/src/projector/ctemplate/CMakeLists.txt
+++ b/src/projector/ctemplate/CMakeLists.txt
@@ -299,7 +299,7 @@ set(CTEMPLATE_SRCS ${GENERATED_HEADERS}
 )
 
 if ( WIN32 )
-	set(CTEMPLATE_SRCS ${SRC_ROOT}/windows/port.cc)
+	set(CTEMPLATE_SRCS ${CTEMPLATE_SRCS} ${SRC_ROOT}/windows/port.cc)
 	set(COMPILE_DEFINITIONS ${COMPILE_DEFINITIONS} "${ac_windows_dllexport}_BUILDING")
 endif()
 
