Add template manager and fixed include directories.

--- a/src/projector/CMakeLists.txt
+++ b/src/projector/CMakeLists.txt
@@ -1,18 +1,19 @@
 add_subdirectory(ctemplate)
 
-include_directories(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_BINARY_DIR}/include)
+include_directories(${CMAKE_CURRENT_BINARY_DIR} ${ctemplate_BINARY_DIR}/include)
 
 unset(QT_LIBRARIES)
 set(QT_USE_QTWEBKIT 1)
 include(${QT_USE_FILE})
 
-set(PROJECTOR_SRC main.cpp ProjectorWindow.cpp)
+set(PROJECTOR_SRC main.cpp ProjectorWindow.cpp TemplateManager.cpp)
+set(PROJECTOR_HDR TemplateManager.h)
 set(PROJECTOR_MHDR ProjectorWindow.h)
 qt4_wrap_cpp(PROJECTOR_MSRC ${PROJECTOR_MHDR})
 
 set(PROJECTOR_UIS ProjectorWindow.ui)
 qt4_wrap_ui(PROJECTOR_UIS_H ${PROJECTOR_UIS})
 
-add_executable(projector ${PROJECTOR_SRC} ${PROJECTOR_MSRC} ${PROJECTOR_UIS_H})
+add_executable(projector ${PROJECTOR_SRC} ${PROJECTOR_MSRC} ${PROJECTOR_UIS_H} ${PROJECTOR_HDR})
 
-target_link_libraries(projector ${QT_LIBRARIES} ${QT_QTWEBKIT_LIBRARY} ctemplate)
+target_link_libraries(projector ${QT_LIBRARIES} ctemplate util network)
