--- a/src/client/CMakeLists.txt
+++ b/src/client/CMakeLists.txt
@@ -7,10 +7,10 @@
 #add_executable(test ${SRCS} ${UIS_H} ${MOC_SRCS})
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
 
-#set(CONTESTANT_SRCS contestant_app.cpp)
-#set(CONTESTANT_MHDRS ${INCLUDE_DIR}/contestant_app.h)
-#QT4_WRAP_CPP(CONTESTANT_MSRCS ${CONTESTANT_MHDRS})
-#set(CONTESTANT_UIS login.ui welcome.ui reconnect.ui elims.ui semifinals.ui finals.ui tiebreaker.ui summary.ui)
-#QT4_WRAP_UI(CONTESTANT_UIS_H ${CONTESTANT_UIS})
-#add_executable(contestant ${CONTESTANT_SRCS} ${CONTESTANT_UIS_H} ${CONTESTANT_MSRCS})
+set(CONTESTANT_SRCS contestant_app.cpp)
+set(CONTESTANT_MHDRS ${INCLUDE_DIR}/contestant_app.h)
+QT4_WRAP_CPP(CONTESTANT_MSRCS ${CONTESTANT_MHDRS})
+set(CONTESTANT_UIS login.ui welcome.ui reconnect.ui elims.ui semifinals.ui finals.ui tiebreaker.ui summary.ui)
+QT4_WRAP_UI(CONTESTANT_UIS_H ${CONTESTANT_UIS})
+add_executable(Contestant ${CONTESTANT_SRCS} ${CONTESTANT_UIS_H} ${CONTESTANT_MSRCS})
 
