--- a/src/projector/CMakeLists.txt
+++ b/src/projector/CMakeLists.txt
@@ -6,8 +6,8 @@ unset(QT_LIBRARIES)
 set(QT_USE_QTWEBKIT 1)
 include(${QT_USE_FILE})
 
-set(PROJECTOR_SRC main.cpp ProjectorWindow.cpp TemplateManager.cpp)
-set(PROJECTOR_HDR TemplateManager.h)
+set(PROJECTOR_SRC main.cpp ProjectorWindow.cpp TemplateManager.cpp DefaultTemplates.cpp)
+set(PROJECTOR_HDR TemplateManager.h DefaultTemplates.h)
 set(PROJECTOR_MHDR ProjectorWindow.h)
 qt4_wrap_cpp(PROJECTOR_MSRC ${PROJECTOR_MHDR})
 
