--- a/src/net/CMakeLists.txt
+++ b/src/net/CMakeLists.txt
@@ -11,12 +11,14 @@ set(NET_SRCS contestant_net.cpp
 		temp_connection.cpp
 		contestant_connection.cpp
 		admin_connection.cpp
-		presenter_connection.cpp)
+		projector_connection.cpp
+		projector_net.cpp)
 set(NET_MHDRS ${INCLUDE_DIR}/net/contestant_net.h
 		${INCLUDE_DIR}/net/server_net.h
 		${INCLUDE_DIR}/net/temp_connection.h
 		${INCLUDE_DIR}/net/contestant_connection.h
 		${INCLUDE_DIR}/net/admin_connection.h
-		${INCLUDE_DIR}/net/presenter_connection.h)
+		${INCLUDE_DIR}/net/projector_connection.h
+		${INCLUDE_DIR}/net/projector_net.h)
 QT4_WRAP_CPP(NET_MSRCS ${NET_MHDRS})
 add_library(network ${NET_SRCS} ${NET_MSRCS})
