starting out on deployer clas. Added all files needed (.h, .cpp, .ui )

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,6 +10,7 @@ add_subdirectory(unit_tests)
 add_subdirectory(admin)
 add_subdirectory(client)
 add_subdirectory(config_editor)
+add_subdirectory(deployer)
 add_subdirectory(projector)
 add_subdirectory(question_editor)
 add_subdirectory(server)
