--- a/src/projector/CMakeLists.txt
+++ b/src/projector/CMakeLists.txt
@@ -7,10 +7,10 @@ set(QT_USE_QTWEBKIT 1)
 include(${QT_USE_FILE})
 
 set(PROJECTOR_SRC main.cpp ProjectorWindow.cpp TemplateManager.cpp DefaultTemplates.cpp
-				  ProjectorController.cpp MainController.cpp AuthorController.cpp)
+				  ProjectorController.cpp MainController.cpp AuthorController.cpp ContestTimer.cpp)
 set(PROJECTOR_HDR TemplateManager.h DefaultTemplates.h
 				  ProjectorController.h MainController.h AuthorController.h)
-set(PROJECTOR_MHDR ProjectorWindow.h)
+set(PROJECTOR_MHDR ProjectorWindow.h ContestTimer.h)
 qt4_wrap_cpp(PROJECTOR_MSRC ${PROJECTOR_MHDR})
 
 set(PROJECTOR_UIS ProjectorWindow.ui)
