-testing out the QFile::copy() method -started with the deploy_server

--- a/src/deployer/CMakeLists.txt
+++ b/src/deployer/CMakeLists.txt
@@ -14,9 +14,10 @@ include_directories(${CMAKE_CURRENT_BINARY_DIR})
 #qt4_wrap_ui(Q_EDITOR_UIS_H ${Q_EDITOR_UIS})
 #add_executable(qeditor ${Q_EDITOR_SRC} ${Q_EDITOR_MSRC} ${Q_EDITOR_UIS_H})
 
-set(DEPLOYER_SRC deployer.cpp main.cpp)
-set(DEPLOYER_MHDR ${INCLUDE_DIR}/deployer.h )
-qt4_wrap_cpp(DEPLOYER_MSRC ${DEPLOYER_MHDR})
-set(DEPLOYER_UIS deployer.ui)
-qt4_wrap_ui(DEPLOYER_UIS_H ${DEPLOYER_UIS})
-add_executable(deployer ${DEPLOYER_SRC} ${DEPLOYER_MSRC} ${DEPLOYER_UIS_H})
+set(D_EDITOR_SRC deployer.cpp main.cpp)
+#set(D_EDITOR_SRC functions_test.cpp deployer.cpp )
+set(D_EDITOR_MHDR ${INCLUDE_DIR}/deployer.h )
+qt4_wrap_cpp(D_EDITOR_MSRC ${D_EDITOR_MHDR})
+set(D_EDITOR_UIS deployer.ui)
+qt4_wrap_ui(D_EDITOR_UIS_H ${D_EDITOR_UIS})
+add_executable(deployer ${D_EDITOR_SRC} ${D_EDITOR_MSRC} ${D_EDITOR_UIS_H})
