--- a/resources/deployer_config.cfg
+++ b/resources/deployer_config.cfg
@@ -1,5 +1,5 @@
-server C:/cerberus
-client C:/cerberus
-registration C:/cerberus
-qeditor C:/cerberus
-projector C:/cerberus
+server C:/cerberus/server
+client C:/cerberus/client
+registration C:/cerberus/reg
+qeditor C:/cerberus/qeditor
+projector /proj
