Fix deployer according to new specs -still dependent on <component>_deploy.txt files though.

--- a/resources/deployer_config.cfg
+++ b/resources/deployer_config.cfg
@@ -2,4 +2,4 @@ server C:/cerberus/server
 client C:/cerberus/client
 registration C:/cerberus/reg
 qeditor C:/cerberus/qeditor
-projector /proj
+projector C:/cerberus/proj
