Added the capability of deploying conf_editor.

--- a/resources/deployer_config.cfg
+++ b/resources/deployer_config.cfg
@@ -3,3 +3,4 @@ client C:/cerberus/client
 registration C:/cerberus/reg
 qeditor C:/cerberus/qeditor
 projector C:/cerberus/proj
+conf_editor C:/cerberus/conf_editor
